--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ClienteNome" class="control-label"></label>
-                <input asp-for="ClienteNome" class="form-control" />
+                <input asp-for="ClienteNome" class="form-control p-2" />
                 <span asp-validation-for="ClienteNome" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-outline-light">Voltar</a>
+                <a asp-action="Index" class="btn w-25 btn-outline-light">Voltar</a>
             </div>
         </form>
     </div>
