Alterações de Aula (Layout)

--- a/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Produtos/Index.cshtml
@@ -39,7 +39,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Categoria.CategoriaNome)
                 </td>
-                <td class="tex">
+                <td class="text-end">
                     <a class="text-decoration-none link-light" asp-action="Edit" asp-route-id="@item.ProdutoId">
                         <svg class="mx-2" bootstrap-icon="PencilFill" width="16" height="16" aria-label="Editar"></svg>
                     </a>
