--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Create.cshtml
@@ -18,13 +18,23 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" />
+                <input asp-for="CPF" id="CPF" class="form-control" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
+            <!--
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" type="email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            -->
+            <div class="col-auto form-group mt-3">
+                <label class="visually-hidden" asp-for="Email" class="control-label" for="email">Email</label>
+                <div class="input-group">
+                    <div class="input-group-text ">@@</div>
+                    <input asp-for="Email" type="email" class="form-control" id="email" placeholder="Digite Seu E-mail..." />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
@@ -33,7 +43,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" />
+                <input asp-for="Celular" id="Celular" class="form-control" />
                 <span asp-validation-for="Celular" class="text-danger"></span>
             </div>
             <div class="form-group">
