--- a/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/ItensDaVenda/Index.cshtml
@@ -1,15 +1,18 @@
 ﻿@model IEnumerable<AppVendasWeb.Models.ItemDaVenda>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Itens das Vendas";
 }
 
-<h1>Index</h1>
+<h1 class="display-5 text-light my-5">Itens das Vendas</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-lg btn-outline-light d-inline-flex align-items-center">
+        <svg class="me-3" bootstrap-icon="PlusLg" width="20" height="20" aria-label="Adicionar"></svg> Adicionar
+    </a>
 </p>
-<table class="table">
+
+<table class="table table-dark table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -28,26 +31,26 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Produto.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Venda.VendaId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ItemDaVendaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ItemDaVendaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ItemDaVendaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Produto.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Venda.VendaId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Valor)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ItemDaVendaId">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ItemDaVendaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
