--- a/AppVendasWeb/AppVendasWeb/Views/Clientes/Index.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Clientes/Index.cshtml
@@ -12,6 +12,19 @@
     </a>
 </p>
 
+<div>
+    <form method="post" asp-action="Search">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" name="searchString"
+                   placeholder="Pesquisar por nome" aria-label="Pesquisar por nome"
+                   aria-describedby="button-addon2">
+            <button class="btn btn-outline-light" type="submit" id="button-addon2">
+                <svg bootstrap-icon="Search" width="16" height="16" aria-label="Pesquisar"></svg>
+            </button>
+        </div>
+    </form>
+</div>
+
 <div class="table-responsive">
     <table class="table table-dark table-striped table-hover">
         <thead>
