--- a/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
@@ -123,7 +123,7 @@
                         <input type="text" name="quantidade" id="quantidade" class="form-control" />
                     </td>
                     <td>
-                        <input type="text" name="precoTotal" id="precoTotal" class="form-control" readonly />
+                        <input type="number" step="0.01" name="precoTotal" id="precoTotal" class="form-control" readonly />
                     </td>
                 </tr>
             </table>
@@ -137,8 +137,10 @@
         document.getElementById('quantidade').addEventListener('focusout', function () {
             // Obtém o valor da quantidade
             var quantidade = parseInt(this.value);
-            // Obtém o preço do produto
-            var precoProduto = parseFloat(document.getElementById('preco').value);
+            // Obtém o preço do produto como texto
+            var precoProduto = document.getElementById('preco').value;
+            // Substitui a vírgula por ponto, se houver e converte para o tipo Float
+            precoProduto = parseFloat(precoProduto.replace(/,/g, '.'));
             // Calcula o preço total
             var precoTotal = quantidade * precoProduto;
             // Atualiza o preço total na interface do usuário
