--- a/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
@@ -44,7 +44,7 @@
                 <div class="col">
                     <div class="input-group mb-3">
                         <input id="NomeCliente" name="NomeCliente" class="form-control p-2 py-3 rounded-end" value="@ViewData["ClienteSelecionado"]" readonly />
-                        <input asp-for="ClienteId" type="hidden" />
+                        <input asp-for="ClienteId" type="hidden" value="@ViewData["IdSelecionado"]" />
                         <span asp-validation-for="ClienteId" class="text-danger"></span>
                         <button type="button" class="btn btn-outline-light p-2 py-3" data-bs-toggle="modal" data-bs-target="#janelaCliente">
                             <svg bootstrap-icon="Search" width="20" height="20" aria-label="Pesquisar"></svg> Buscar Cliente
