--- a/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
+++ b/AppVendasWeb/AppVendasWeb/Views/Home/IniciarVenda.cshtml
@@ -10,6 +10,8 @@
     listaProdutosSelecionados.Add(produto);
 
     ViewBag.ClienteId = new SelectList(listaClientes.Where(c => c.CadastroAtivo == true), "ClienteId", "ClienteNome");
+
+
 }
 
 <h4 class="text-center">Nova Venda</h4>
@@ -25,7 +27,7 @@
                         <span class="input-group-text p-3">
                             <label asp-for="NotaFiscal" class="control-label"></label>
                         </span>
-                        <input asp-for="NotaFiscal" class="form-control p-2 py-3 rounded-end" placeholder="# Automático ao Salvar" readonly />
+                        <input asp-for="NotaFiscal" class="form-control p-2 py-3 rounded-end" value="" placeholder="# Automático ao Salvar" readonly />
                         <span asp-validation-for="NotaFiscal" class="text-danger"></span>
 
                     </div>
